--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "ejs": "^1.0.0",
     "mongoose": "^5.0.15",
     "nodemon": "^1.17.3",
     "react": "^16.3.2",
@@ -17,9 +18,13 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "webpack": "webpack",
+    "start": "npm run webpack && nodemon --exec babel-node -- bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
