--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-cli": "^6.26.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
-    "ejs": "~> 2.5.5",
+    "ejs": "2.5.5",
     "mongoose": "^5.0.15",
     "nodemon": "^1.17.3",
     "react": "^16.3.2",
